# dt-dataflow

./: .clang-format  .gitmodules  CMakeLists.txt  Config.cmake.in  vcpkg.json
core/: CMakeLists.txt
core/include/dt/df/core/: any_slot.hpp  base_node.hpp  base_slot.hpp  binary_vector_slot.hpp  calculate_slot.hpp  core_node.hpp  core_slot.hpp  flow_base_slot.hpp  graph_manager.hpp  gui.hpp  json.hpp  node_types.hpp  number_slot.hpp  prototype_node.hpp  prototype_slot.hpp  slot_types.hpp  span_slot.hpp  string_slot.hpp  types.hpp  ui_node.hpp  value_less_slot.hpp  window_base_node.hpp  window_node.hpp
core/include/dt/df/helper/: simple_output_node.hpp
core/src/: any_slot.cpp  base_node.cpp  base_slot.cpp  binary_vector_slot.cpp  calculate_slot.cpp  core_node.cpp  core_slot.cpp  flow_base_slot.cpp  gui.cpp  json.cpp  number_slot.cpp  prototype_node.cpp  prototype_slot.cpp  span_slot.cpp  string_slot.cpp  ui_node.cpp  value_less_slot.cpp  window_base_node.cpp  window_node.cpp
default-plugin/: CMakeLists.txt
default-plugin/src/: plugin.cpp
default-plugin/src/nodes/: led_node.cpp  led_node.hpp  simple_cmp.cpp  simple_cmp.hpp  simple_cmp_builder.hpp  simple_cmps.cpp  simple_cmps.hpp  simple_op.cpp  simple_op.hpp  simple_op_builder.hpp  simple_ops.cpp  simple_ops.hpp  simple_output_builder.hpp  simple_outputs.cpp  simple_outputs.hpp  timer_node.cpp  timer_node.hpp
default-plugin/src/slots/: bool_slot.cpp  bool_slot.hpp  floating_slot.cpp  floating_slot.hpp  int_slot.cpp  int_slot.hpp  string_slot.cpp  string_slot.hpp  trigger_slot.cpp  trigger_slot.hpp
docs/assets/: flow.drawio
editor/: CMakeLists.txt
editor/include/dt/df/editor/: data_flow_graph.hpp  editor.hpp  gui.hpp  id_generator.hpp  types.hpp
editor/src/: data_flow_graph.cpp  editor.cpp  graph_impl.cpp  graph_impl.hpp  gui.cpp  id_generator.cpp  node_display_tree.cpp  node_display_tree.hpp  priv_types.cpp  priv_types.hpp
plugin/: CMakeLists.txt
plugin/include/dt/df/plugin/: helper.hpp  plugin.hpp
